@@ -203,9 +203,9 @@ $(OS)\EbookController.obj: $B\src\mui\MuiLayout.h $B\src\mui\MuiPainter.h $B\src
 $(OS)\EbookController.obj: $B\src\mui\TextRender.h $B\src\SettingsStructs.h $B\src\Translations.h
 $(OS)\EbookController.obj: $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h $B\src\utils\DebugLog.h
 $(OS)\EbookController.obj: $B\src\utils\GdiPlusUtil.h $B\src\utils\GeomUtil.h $B\src\utils\HtmlParserLookup.h
-$(OS)\EbookController.obj: $B\src\utils\Scoped.h $B\src\utils\SettingsUtil.h $B\src\utils\Sigslot.h
-$(OS)\EbookController.obj: $B\src\utils\StrUtil.h $B\src\utils\ThreadUtil.h $B\src\utils\Timer.h
-$(OS)\EbookController.obj: $B\src\utils\Vec.h $B\src\utils\ZipUtil.h
+$(OS)\EbookController.obj: $B\src\utils\HtmlPullParser.h $B\src\utils\Scoped.h $B\src\utils\SettingsUtil.h
+$(OS)\EbookController.obj: $B\src\utils\Sigslot.h $B\src\utils\StrUtil.h $B\src\utils\ThreadUtil.h
+$(OS)\EbookController.obj: $B\src\utils\Timer.h $B\src\utils\Vec.h $B\src\utils\ZipUtil.h
 $(OS)\EbookControls.obj: $B\src\AppPrefs.h $B\src\BaseEngine.h $B\src\DisplayState.h
 $(OS)\EbookControls.obj: $B\src\EbookBase.h $B\src\EbookControls.h $B\src\EbookFormatter.h
 $(OS)\EbookControls.obj: $B\src\HtmlFormatter.h $B\src\mui\Mui.h $B\src\mui\MuiBase.h
